# qobuz-dl

./: pyproject.toml
qobuz_dl/: core.py  downloader.py  qopy.py  utils.py
